Broadcast server state to clients