@@ -1,98 +1,49 @@
 # MC Server Runner
 
-Each docker container runs just one server.
+`config.yml`:
 
-## Frontend
+```yml
+world_dir: <path to server>
+db_path: ./mc-runner.db
+connect_url: localhost:25565    # Where players should connect
 
-Served on `/`.
+# Restic config for automatic backups
+restic_path: /some/backup/path  # Where the backups live
 
-Svelte static page.
+# Use these defaults when using the container image
+java8: java8                    # Java 8 executable
+java17: java17                  # Java 17 executable
+java21: java21                  # Java 21 executable
+java25: java25                  # Java 25 executable
 
-## Backend
+# Log level
+log_level: debug
+```
 
-Backend on `/api`, Go with Echo.
+Inside `world_dir` place a `mc-runner.yml` file
+```yml
+# Java version needed for this server
+java_version: 21                        
 
-Legend:
-- (R): restricted, for automation, not for users
-- (U): authenticated users
-- (A): admin only
+# Jar file to run (might be different if you use paper/fabric)
+jar_file: server.jar                   
 
-### Hooks
+# Flags to pass to java _before_ `-jar`, see the following sources:
+# - https://minecraft.fandom.com/wiki/Tutorials/Setting_up_a_server#Java_options
+# - https://docs.papermc.io/paper/aikars-flags/
+java_flags:                             
+ - -Xmx6G
+ - -Xms6G
+ - -XX:+UnlockExperimentalVMOptions
+ - -XX:+UseZGC
 
-On `/api/hook` (R).
+# Flags to pass _after_ the jar file, see https://minecraft.wiki/w/Tutorial:Setting_up_a_Java_Edition_server#Server_options
+minecraft_flags:                        
+ - --no-gui
 
-- `/api/hooks/mc`: get player and server lifetime events from the companion mod, 
-stores into `players`.
+# The name of this server, will be diplasplayed in the web UI
+server_name: My amazing new server!     
 
-- `/api/hooks/tg`: receive updates from Telegram from the companion bot
-    - commands:
-        - `/status` -> returns list of players
-        - `/link <link_tg_token>` -> links a username to account
-    - send msg on
-        - server open (by who)
-        - server close (how much time has it been open)
-        - player joins or leaves
-
-### Authentication
-
-On `/api/auth`, just a cookie (lasts forever, until removed from db).
-
-No password, ever.
-
-- `/api/auth/register?t=<register_token>`: the token is a random string.
-Registration flow as follows:
-    - Admin invites user with `/api/admin/invite`
-    - A `registration_token` gets added to `token_store` table
-    - User clicks the link and chooses username (no password)
-    - Server removes `registration_token` from `token_store`, adds user to `users` and the
-    refresh cookie to `token_store`
-    - Server returns the cookie
-
-- `/api/auth/add-device` (U): generate a `login_token` to add to `token_store` and returns
-it to user to be used in `/api/auth/login`. Expires after 5 minutes.
-
-- `/api/auth/login?t=<login_token>`: removes `login_token` from `token_store`, 
-generates `refresh_token` and adds it to `token_store`, return `refresh_token`
-
-- `/api/auth/logout`: unset the `refresh_token`, removes it from `token_store`
-
-- `/api/auth/link-tg` (U): generates `link_tg_token`
-
-- `/api/auth/claim-mc` (U): sets `mc_name` to the provided one TODO: idk how to verify authenticity.
-
-### Server Management
-
-On `/api/management`.
-Server closes only after a timeout.
-
-- `/api/management/status` (U): returns if on or off and a list of players
-- `/api/management/start` (U): starts the server if off
-- `/api/management/logs` (U): websocket for logs
-
-## Database
-
-### users
-
-- id
-- name
-- player_id (nullable, foreign key of `players`)
-- tg_id (nullable)
-
-### players
-
-- id
-- in_game_name
-- is_online
-- is_bot (use [this](https://carpet.tis.world/docs/rules#fakeplayernameprefix))
-
-### token_store
-
-- token (index, raw bytes)
-- expires (date)
-- type (enum of `refresh_token`, `login_token`, `register_token`, `link_tg_token`)
-- user_id (foreign key of `users`)
-
-### metadata
-
-- key (string)
-- value (string)
+# Ignore if you don't use carpet, otherwise set the same value you used in https://carpet.tis.world/docs/rules#fakeplayernameprefix
+bot_prefix: "[BOT]"                     
+```
